Fix heading vertical spacing

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -25,7 +25,10 @@ h1, h2, h3 {
   @apply font-black;
   font-family: "Inconsolata", monospace;
 }
-h1, h2, p {
+h1, h2 {
+  @apply my-4;
+}
+p {
   @apply mb-4;
 }
 section a, footer p a {
